@@ -22,7 +22,6 @@
 \sec{synopsis}{SYNOPSIS}
 \par{
    \clm{vol}
-   \synoptopt{-fraction}{num}{nff factor}
    \synoptopt{-o}{fname}{output file}
    <cl file>+
    }
@@ -35,19 +34,6 @@
    correlates with what is deemed to be volatile behaviour.  For all pairs of
    clusterings the set of all intersections is computed, and these  are
    considered in turn.
-   
-   An intersection is deemed to be volatile if the size of the intersection is
-   less than half the size of the smallest of the two clusters.  In that case,
-   for each node in the intersection its volatility score is incremented by one
-   over the size of the intersection.
-
-   The size comparison can be made more stringent by increasing the
-   \genopt{-fraction}{<frac>} option, which is by default set to \v{0.5}.
-   Volatility occurs if the size of the intersection is less than
-   \usearg{<frac>} times the size of the smallest cluster.  If the
-   \genopt{-fraction} value is increased all the way up to 1.0, the implication
-   is that an intersection is considered volatile unless one of the two
-   clusteres considered is a subset of the other.
    }
 
 
